WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256907
[GStreamer] Video encoder caps reported as leaked
https://bugs.webkit.org/show_bug.cgi?id=256907
Summary
[GStreamer] Video encoder caps reported as leaked
Philippe Normand
Reported
2023-05-17 11:09:29 PDT
They're in a never destroyed singleton, not really a leak per-se but can confuse the gst leak tracer.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-05-17 11:11:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13974
EWS
Comment 2
2023-05-19 05:58:38 PDT
Committed
264249@main
(5a8358f7d8ad): <
https://commits.webkit.org/264249@main
> Reviewed commits have been landed. Closing PR #13974 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-19 05:59:18 PDT
<
rdar://problem/109563277
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug