[GStreamer] Video encoder caps reported as leaked https://bugs.webkit.org/show_bug.cgi?id=256907

Reviewed by Xabier Rodriguez-Calvar.

Flag the EncoderDefinition caps fields as MAY_BE_LEAKED, so that they can be ignored by the
GStreamer leak tracer. Those caps are static for the whole WebProcess lifetime.

* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
(Encoders::registerEncoder):

Canonical link: https://commits.webkit.org/264249@main